src/objects/csmrgp__Duplicate_Group__c.object
<CustomObject>
    <description>Collection of cases that fit CMP&apos;s duplicate criteria</description>
    <fields>
        <fullName>csmrgp__Cases_Not_Merged__c</fullName>
        <description>Cases without Parent Cases in a duplicate group; Duplicate groups with more than one case not merged suggest potential for duplicates that should be merged. Ordinarily, only one master case should be present within a duplicate group once all duplicates are merged.</description>
        <label>Cases Not Merged</label>
        <summaryFilterItems>
            <field>csmrgp__Duplicate_Case__c.csmrgp__Has_Parent__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>csmrgp__Duplicate_Case__c.csmrgp__Is_Deleted__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>csmrgp__Duplicate_Case__c.csmrgp__Duplicate_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csmrgp__Created_by_Batch_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by Batch Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csmrgp__Duplicate_Case_Count__c</fullName>
        <description>Count of Duplicate Cases within a Duplicate Group.</description>
        <label>Duplicate Case Count</label>
        <summaryForeignKey>csmrgp__Duplicate_Case__c.csmrgp__Duplicate_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>csmrgp__Group_Count__c</fullName>
        <description>For counting groups in reports. See http://help.salesforce.com/apex/HTViewSolution?id=000182022 for details.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csmrgp__Initial_Case_Created_Date__c</fullName>
        <description>Earliest created date for related cases used analytics.</description>
        <inlineHelpText>Earliest created date for related cases used analytics.</inlineHelpText>
        <label>Initial Case Created Date</label>
        <summarizedField>csmrgp__Duplicate_Case__c.csmrgp__Case_Created_Date__c</summarizedField>
        <summaryForeignKey>csmrgp__Duplicate_Case__c.csmrgp__Duplicate_Group__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Duplicate Group</label>
    <listViews>
        <fullName>csmrgp__All</fullName>
        <columns>NAME</columns>
        <columns>csmrgp__Duplicate_Case_Count__c</columns>
        <columns>csmrgp__Created_by_Batch_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>csmrgp__Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>csmrgp__Duplicate_Case_Count__c</columns>
        <columns>csmrgp__Created_by_Batch_Job__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last 30 Days</label>
    </listViews>
    <nameField>
        <displayFormat>DG-{00000}</displayFormat>
        <label>Duplicate Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>